--- a/assets/public/index.html
+++ b/assets/public/index.html
@@ -3,18 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vet Projeto</title>
+    <title>LuizVet</title>
     <link rel="stylesheet" href="style/style.css">
     <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"/>
+
 </head>
 <body>
     <main>
         <header>
-            <div>
-                <img src="img/android-chrome-512x512.png" alt="" class="logo">
-                <div id="dr">Dr. Luiz Felipe Lourenço Obst</div>
-                <p id="drp">Médico Veterinario</p>
+            <div class="doutor">
+                <img src="img/logo_influxo.png" alt="" class="logo">
+                <div id="dr">Dr. Luiz Felipe Lourenço</div>
+                <p id="drp">Médico Veterinário</p>
             </div>
             <article class="info">
                 <div>
@@ -37,24 +40,201 @@
                         <ul class="nav-menu">
                             <li><a href="/">HOME</a></li>
                             <li><a href="/">SOBRE</a></li>
-                            <li><a href="/">SERVIÇOS</a></li>
+                            <li><a href="#" id="services">SERVIÇOS</a></li>
                             <li><a href="/">DÚVIDAS</a></li>
                             <li><a href="/">CONTATO</a></li>
                         </ul>
                     </div>
                 </div>
+                <div class="services-menu">
+                        <a href="/">Consultas</a>
+                        <a href="/">Vacinas</a>
+                        <a href="/">Cirurgias</a>
+                        <a href="/">Ultrasonografia</a>
+                        <a href="/">Acupuntura</a>
+                </div>
                 <div>
                     <ul class="right">
-                        <li><a href="/"><i class="gg-instagram"></i></a></li>
-                        <li><a href="/"><i class="gg-facebook"></i></a></li>
-                        <li><i class="gg-search"></i></li>
+                        <li><a href="https://www.instagram.com/obstluiz/?utm_source=qr&igshid=MzNlNGNkZWQ4Mg%3D%3D" target="_blank" rel="nofollow"><abbr title="Veja nossas publicações no Instagram"><i class="fa fa-instagram" id="instagram" style="font-size:24px;color: white; position: relative; right: -80%; bottom: 5vh; transform: translate(-50%, -50%);"></i></abbr></a></li>
+                        <li><a href="https://www.facebook.com/people/Fisioterapia-Veterin%C3%A1ria-Luiz-Obst/100083188847534/?mibextid=ZbWKwL" target="_blank" rel="nofollow"><abbr title="Veja nossas publicações no Facebook"><i class="fa fa-facebook-f" id="facebook"style="font-size:24px;color: white; position: relative; right: -82.3%; bottom: 10vh; transform: translate(-50%, -50%);""></i></abbr></a></li>
                     </ul>
                 </div>
             </nav>
         </header>
         <section>
-
+            <div class="common">MÉDICO VETERINÁRIO</div>
+            <h1>LuizVet</h1>
+            <p>
+                Aqui, o carinho e a atenção ao seu melhor amigo de patas são nossa maior alegria.<br>
+                Nossa equipe é composta por amantes de animais e especialistas em saúde,<br>
+                prontos para oferecer cuidados que seu companheiro merece.</p>
+        <div>
+            <div id="petimg">
+                <div class="circle"></div>
+                <div class="circle2"></div>
+                <img src="img/petimg.png" alt="cachorro" class="pet">
+            </div>
+            <button class="btn1">NOSSOS SERVIÇOS</button>
+            <a href="https://api.whatsapp.com/send?phone=5516991220545" target="_blank" rel="nofollow"><button class="btn2"><i class="fa fa-whatsapp" style="font-size:20px;color: white; padding-right: 5px; position: relative;"></i>ENVIE SUA MENSAGEM</button></a>
+        </div>
         </section>
+        <div>
+            <svg class="waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 24 150 28" preserveAspectRatio="none" shape-rendering="auto">
+              <defs>
+                <path id="gentle-wave" d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z" />
+              </defs>
+              <g class="parallax">
+                <use xlink:href="#gentle-wave" x="48" y="3" fill="rgba(255,255,255,0.7)" />
+                <use xlink:href="#gentle-wave" x="48" y="3" fill="rgba(255,255,255,0.5)" />
+                <use xlink:href="#gentle-wave" x="48" y="5" fill="rgba(255,255,255,0.3)" />
+                <use xlink:href="#gentle-wave" x="48" y="7" fill="#fff" />
+              </g>
+            </svg>
+          </div>
+        <section class="section3cards">
+            <div class="container-3cards">
+                <img src="img/vaccine_4191422.png" alt="Vacina para pet" class="vaccine">
+                <img src="img/first-aid_3636341.png" alt="Consulta para pet" class="consulta">
+                <img src="img/medicine.png" alt="Cirurgia para pet" class="cirurgia">
+                <div class="row">
+                    <h3 class="leftText">Consultas</h3>
+                            <p class="consultas">Nossas consultas veterinárias oferecem cuidados personalizados. <br>
+                                Com veterinários experientes, realizamos avaliações abrangentes<br>
+                                 para garantir a saúde do seu pet. <br>
+                                 De check-ups de rotina a preocupações específicas, <br>
+                                 estamos aqui para cuidar do seu animal de estimação. <br>
+                            </p>
+                    <h3 class="centerText">Vacinas</h3>
+                            <p class="vacinas">
+                                oferecemos um serviço completo de vacinação para proteger<br>
+                                 seu animal de estimação contra doenças perigosas. <br>Nossos especialistas em saúde animal seguem as diretrizes mais recentes<br>
+                                  e podem aconselhá-lo sobre as vacinas adequadas para a idade<br> e estilo de vida do seu pet.
+                            </p>
+                    <h3 class="rightText">Cirurgias</h3>
+                        <p class="cirurgias">Seja uma cirurgia simples ou complexa,<br>
+                             estamos comprometidos com a segurança,<br>
+                             conforto e recuperação do seu pet. <br>
+                             Confie em nossa experiência para oferecer<br>
+                              o melhor atendimento cirúrgico para o <br>
+                              seu animal de estimação.
+                        </p>
+                </div>
+                <div class="moreInfo">
+                    <div><a href="/" class="leftInfo"><span class="padarrow">Saiba Mais</span><span class="material-symbols-outlined" id="arrow">arrow_forward</span></a></div>
+                    <div><a href="/" class="centerInfo"><span class="padarrow">Saiba Mais</span><span class="material-symbols-outlined" id="arrow2">arrow_forward</span></a></div>
+                    <div><a href="/" class="rightInfo"><span class="padarrow">Saiba Mais</span><span class="material-symbols-outlined" id="arrow3">arrow_forward</span></a></div>
+                </div>
+        </section>
+        <section id="banneragende">
+            <div class="bannerinfo">
+                <h3 class="bannertitle">Agende sua visita</h3>
+                <p>Solicite uma consulta em casa agora mesmo! Atendemos de<br>
+                    domingo à domingo ate as 19h. Agende pelo telefone, <br>
+                    WhatsApp ou em nosso site</p>
+            </div>
+            <a href="https://api.whatsapp.com/send?phone=5516991220545" target="_blank" rel="nofollow"><button class="whatsapp"><i class="fa fa-whatsapp" style="font-size:20px;color: white; padding-right: 5px; position: relative;"></i>AGENDE PELO WHATSAPP</button></a>
+            <img src="img/um-jovem-do-sexo-masculino-com-camiseta-cinza-segurando-um-gatinho-cinza-fofo-removebg-preview.png" alt="jovem segurando gato" id="jovem">
+        </section>
+        <section id="banneratende">
+            <h3 id="regiao">Regiões atendidas</h3>
+            <p>Quer solicitar os nossos serviços para garantiar a saúde e a felicidade<br>
+                do seu amigo de quatro patas? Nossos serviços estão sempre disponíveis nas<br>
+                principais regiões de:
+            </p>
+            <img src="img/medium-shot-woman-kissing-dog (1).jpg" alt="mulher beijando cachorro" class="responsive-img">
+            <h3 id="sp">São Paulo</h3>
+            <a href="https://api.whatsapp.com/send?phone=5516991220545" target="_blank" rel="nofollow"><button class="whatsapp2"><i class="fa fa-whatsapp" style="font-size:20px;color: white; padding-right: 5px; position: relative;"></i>AGENDE PELO WHATSAPP</button></a>
+        </section>
+        <section id="bannerelogios">
+            <!-- Slider main container -->
+<div class="swiper">
+    <div class="swiper-wrapper">
+      <!-- Slides -->
+      <div class="swiper-slide">
+        <div class="container-coments">
+            <span class="nome">Keiko</span>
+            <span class="coment">"Excelente profissional, pontual,atendimento de ótima qualidade,<br> gostei do sincero aproveito da melhora do meu cachorro"</span>
+            <img src="/assets/public/img/png-transparent-graphy-5-star-symmetry-5-star-can-stock-photo-removebg-preview.png" alt="avaliação" class="stars">
+        </div>
+    </div>
+      <div class="swiper-slide">
+        <div class="container-coments">
+            <span class="nome">Leticia</span><br>
+            <span class="coment">"Muito atencioso e com um cuidado e carinho enorme<br> com nossos filhinhos de 4 patas! Recomendo"</span>
+            <img src="/assets/public/img/png-transparent-graphy-5-star-symmetry-5-star-can-stock-photo-removebg-preview.png" alt="avaliação" class="stars">
+        </div>
+      </div>
+      <div class="swiper-slide">
+        <div class="container-coments">
+            <span class="nome">João Paulo</span><br>
+            <span class="coment">"Profissional muito competente e qualificado. Super recomendo!"</span>
+            <img src="/assets/public/img/png-transparent-graphy-5-star-symmetry-5-star-can-stock-photo-removebg-preview.png" alt="avaliação" class="stars">
+        </div>
+      </div>
+    </div>
+
+    <!-- navigation buttons -->
+    <div class="swiper-button-prev"></div>
+    <div class="swiper-button-next"></div>
+  
+  </div>
+        </section>
+        <footer id="footer">
+            <div class="row">
+                <h3>MENU</h3>
+                <h3>NOSSOS SERVIÇOS</h3>
+                <h3>ONDE ATENDEMOS</h3>
+                <h3>FALE CONOSCO</h3>
+            </div>
+            <div class="separacao-footer">
+                <ul class="leftList">
+                    <li>Home</li>
+                    <li>Sobre</li>
+                    <li>Serviços</li>
+                    <li>Dúvidas</li>
+                    <li>Contato</li>
+                </ul>
+                <ul class="centerList">
+                    <li>Consultas</li>
+                    <li>Vacinas</li>
+                    <li>Cirurgias</li>
+                </ul>
+                <p id="estado">São Paulo</p>
+                <ul class="rightList">
+                    <li>Tel.: (16) 99122-0545</li>
+                    <li>WhatsApp: (16) 99122-0545</li>
+                    <li>obstluiz@gmail.com</li>
+                </ul>
+                <div id="atendimento-footer">
+                    <h3 style="position: absolute; top: 6vh; left: 1vw;">ATENDIMENTO</h3>
+                    <p style="font-weight: bold; padding-bottom: 2vh;">Domingo à Domingo</p>
+                    <p>Até às 19:00</p>
+                </div>
+            </div>
+        </footer>
     </main>
+    <script src="/assets/main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+    <script>
+        const swiper = new Swiper('.swiper', {
+            autoplay:{
+                delay: 3000,
+                disableOnInteraction: false,
+            },
+        loop: true,
+  
+        // If we need pagination
+        pagination: {
+            el: '.swiper-pagination',
+            clickable: true,
+        },
+  
+        // Navigation arrows
+        navigation: {
+            nextEl: '.swiper-button-next',
+            prevEl: '.swiper-button-prev',
+    },
+  });
+    </script>
 </body>
 </html>
