--- a/landingPage/assets/public/home.html
+++ b/landingPage/assets/public/home.html
@@ -53,21 +53,22 @@
                         <a href="/">Ultrasonografia</a>
                         <a href="/">Acupuntura</a>
                 </div>
-                <div>
+                <div class="icons">
                     <ul class="right">
-                        <li><a href="https://www.instagram.com/obstluiz/?utm_source=qr&igshid=MzNlNGNkZWQ4Mg%3D%3D" target="_blank" rel="nofollow"><abbr title="Veja nossas publicações no Instagram"><i class="fa fa-instagram" id="instagram" style="font-size:24px;color: white; position: relative; right: -80%; bottom: 5vh; transform: translate(-50%, -50%);"></i></abbr></a></li>
-                        <li><a href="https://www.facebook.com/people/Fisioterapia-Veterin%C3%A1ria-Luiz-Obst/100083188847534/?mibextid=ZbWKwL" target="_blank" rel="nofollow"><abbr title="Veja nossas publicações no Facebook"><i class="fa fa-facebook-f" id="facebook"style="font-size:24px;color: white; position: relative; right: -82.3%; bottom: 10vh; transform: translate(-50%, -50%);""></i></abbr></a></li>
+                        <li><a href="https://www.instagram.com/obstluiz/?utm_source=qr&igshid=MzNlNGNkZWQ4Mg%3D%3D" target="_blank" rel="nofollow"><abbr title="Veja nossas publicações no Instagram"><i class="fa fa-instagram" id="instagram" style="font-size:24px;color: white; position: relative; right: -80%; bottom: 5vh; transform: translate(-50%, -50%); background-size: 100%; "></i></abbr></a></li>
+                        <li><a href="https://www.facebook.com/people/Fisioterapia-Veterin%C3%A1ria-Luiz-Obst/100083188847534/?mibextid=ZbWKwL" target="_blank" rel="nofollow"><abbr title="Veja nossas publicações no Facebook"><i class="fa fa-facebook-f" id="facebook"style="font-size:24px;color: white; position: relative; right: -82.3%; bottom: 10vh; transform: translate(-50%, -50%);"></i></abbr></a></li>
                     </ul>
                 </div>
             </nav>
         </header>
         <section>
-            <div class="common">MÉDICO VETERINÁRIO</div>
+            <div class="common">MÉDICO VETERINÁRIO
             <h1>LuizVet</h1>
             <p>
                 Aqui, o carinho e a atenção ao seu melhor amigo de patas são nossa maior alegria.<br>
                 Nossa equipe é composta por amantes de animais e especialistas em saúde,<br>
                 prontos para oferecer cuidados que seu companheiro merece.</p>
+            </div>
         <div>
             <div id="petimg">
                 <div class="circle"></div>
@@ -188,16 +189,16 @@
             </div>
             <div class="separacao-footer">
                 <ul class="leftList">
-                    <li>Home</li>
-                    <li>Sobre</li>
-                    <li>Serviços</li>
-                    <li>Dúvidas</li>
-                    <li>Contato</li>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">Sobre</a></li>
+                    <li><a href="">Serviços</a></li>
+                    <li><a href="">Dúvidas</a></li>
+                    <li><a href="">Contato</a></li>
                 </ul>
                 <ul class="centerList">
-                    <li>Consultas</li>
-                    <li>Vacinas</li>
-                    <li>Cirurgias</li>
+                    <li><a href="">Consultas</a></li>
+                    <li><a href="">Vacinas</a></li>
+                    <li><a href="">Cirurgias</a></li>
                 </ul>
                 <p id="estado">São Paulo</p>
                 <ul class="rightList">
